[package]
name = "mlp-games-mirror-serving"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-files = "0.6.10"
actix-web = "4.14.0"
anyhow = "1.0.103"
clap = { version = "4.6.1", features = ["derive"] }
env_logger = "0.11.11"
log = "0.4.33"
maud = { version = "0.27.0", features = ["actix-web"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
